--- a/css/header.css
+++ b/css/header.css
@@ -11,9 +11,18 @@ header .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: min(80%, 1200px);
+    width: 90%;
+    max-width: 1200px;
     margin: auto;
     height: 100%;
+}
+
+header .menu-mobile {
+    display:none;
+}
+
+header .lupa-carrinho-mobile {
+    display: none;
 }
 
 /* 
@@ -345,6 +354,9 @@ header .menus .dropdown-carrinho .dropdown-content .info-compra a.ver-carrinho {
     Linhas
 */
 
+.linhas-container {
+    border-bottom: 1px solid var(--light-yellow);
+}
 
 .linhas {
     height: 60px;
@@ -418,5 +430,223 @@ header .menus .dropdown-carrinho .dropdown-content .info-compra a.ver-carrinho {
         width: 20vw;
     }
 
+}
+
+@media (max-width: 1024px) {
+
+    header .container {
+        width: 95%;
+    }
+
+    header .busca input#pesquisa {
+        width: 210px;
+    }
+
+    header .menus .icone-container {
+        margin-right: 15px;
+    }
+
+    header .busca .menu-busca  {
+        width: 700px;
+        right: calc(50% - 350px);
+    }
+
+    header .busca .menu-busca .produtos {
+        width: 410px;
+    }
+
+    header .busca .menu-busca .produtos .produto:last-of-type {
+        display:none
+    }
+
+}
+
+@media (max-width: 768px) {
+
+    header .container {
+        width: 90%;
+    }
+
+    header .menu-mobile {
+        display:block;
+    }
     
+    header .lupa-carrinho-mobile {
+        display: block;
+    }
+
+    header .container .lupa-carrinho-mobile .lupa {
+        margin-right: 10px;
+    }
+
+
+    header .menu-mobile .menu-mobile-content {
+        top: 0;
+        left:0;
+        position: absolute;
+        width: 100%;
+        background-color: white;
+        display: none;
+    }
+
+    header .menu-mobile .menu-mobile-content.active {
+        display:block;
+    }
+
+    header .menu-mobile .menu-mobile-content .close-container {
+        height: 80px;
+        padding: 32px 21px;
+        border-bottom: 1px solid var(--light-yellow);
+    }
+
+    header .menu-mobile .menu-mobile-content .close-container .close{
+        background-color: white;
+        border:none;
+        outline:none;
+        color: var(--brown-yellow);
+        font-weight: bold;
+        font-size: 18px;
+        cursor: pointer;
+    }
+
+    header .menu-mobile .menu-mobile-content ul {
+        list-style: none;
+    }
+    
+
+    header .menu-mobile .menu-mobile-content ul.conta-fav {
+        border-bottom: 1px solid var(--light-yellow);
+    }
+
+    header .menu-mobile .menu-mobile-content ul li > div {
+        padding: 16px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    header .menu-mobile .menu-mobile-content ul li a {
+        text-decoration: none;
+    }
+
+    header .menu-mobile .menu-mobile-content ul li > div > a {
+        display: flex;
+    }
+
+    header .menu-mobile .menu-mobile-content ul li > div > a > img {
+        width: 20px;
+        margin-right: 17px;
+    }
+
+    header .menu-mobile .menu-mobile-content ul li ul {
+        display: none;
+        padding: 16px;
+        background-color: var(--light-yellow);
+    }
+
+    header .menu-mobile .menu-mobile-content ul li ul.open {
+        display: block;
+    }
+
+    header .menu-mobile .menu-mobile-content ul li ul li {
+        margin-bottom: 16px;
+    }
+
+    header .menu-mobile .menu-mobile-content ul li ul li:last-of-type {
+        margin-bottom: 0;
+    }
+
+    header .menu-mobile .menu-mobile-content ul li ul li  a {
+        color: var(--brown-yellow);
+        font-size: 14px;
+        font-weight: normal;
+    }
+
+    header .menu-mobile .menu-mobile-content ul li h2 {
+        font-size: 14px;
+        font-weight: bold;
+        color: var(--brown);
+    }  
+    
+    header .menu-mobile .menu-mobile-content ul li h3 {
+        font-size: 14px;
+        font-weight: bold;
+        color: var(--brown-yellow);
+    }
+
+    header .menu-mobile .menu-mobile-content ul li .seta {
+        height: 8px;
+        width: 8px;
+        border-bottom: 2px solid var(--brown-yellow);
+        border-left: 2px solid var(--brown-yellow);
+        transform: rotate(-45deg);
+        cursor: pointer;
+        transition: .3s;
+    }
+
+    header .menu-mobile .menu-mobile-content ul li > div.open .seta {
+        transform: rotate(135deg);
+    }
+
+    header .menu-mobile .menu-mobile-content ul li > div.open ~ ul {
+        display:block;
+    }
+
+    header .container .logo {
+        height: 60px;
+    }
+
+    header .menu-mobile .open-menu-mobile {
+        width: 24px;
+        height: 16px;
+        border: none;
+        outline: none;
+        color: var(--brown-yellow);
+        font-weight: normal;
+        font-size: 24px;
+        background-color: white;
+        border-bottom: 2px solid var(--brown-yellow);
+        border-top: 2px solid var(--brown-yellow);
+        cursor: pointer;
+    }
+    header .menu-mobile .open-menu-mobile > div {
+        height: 2px;
+        background-color: var(--brown-yellow);
+    }
+
+    .linhas-container .linhas {
+        display:none;
+    }
+
+    header .busca {
+        position: absolute;
+        top: 110px;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        height: 66px;
+        width: 100%;
+        border-bottom: 1px solid var(--light-yellow);
+    }
+
+    header .busca.active {
+        display: flex;
+    }
+
+    header .busca input#pesquisa {
+        background-image: none;
+        width: 90%;
+    }
+
+    header .busca .menu-busca {
+        display:none;
+    }
+
+    header .busca input:focus ~ .menu-busca {
+        display:none;
+    }
+
+    header .menus {
+        display: none;
+    }
 }
