--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,3 @@
-/* 
-    Footer
-*/
-
 footer {
     display: flex;
     flex-direction: column;
@@ -16,7 +12,6 @@ footer {
 footer .novidades {
     width: 90%;
     max-width: 1200px;
-    height: 132px;
     border-radius: 20px;
     background-color: var(--brown);
     padding: 40px;
@@ -44,7 +39,7 @@ footer .novidades form input {
     width: 296px;
     height: 46px;
     border-radius: 23px;
-    background-color: white;
+    background-color: var(--light-yellow);
     color: var(--brown-yellow);
     border: none;
     outline: none;
@@ -77,56 +72,63 @@ footer .novidades form button {
 
 footer .info-container {
     background-color: var(--light-yellow);
-    height: 314px;
+    padding-bottom: 30px;
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-footer .info-container > div {
+footer .info-container ul {
+    list-style:none;
+}
+
+footer .info-container > ul {
     width: min(1200px, 90%);
     margin-top: 106px;
     display: flex;
     justify-content: space-between;
 }
 
-footer .info-container > div h3 {
+footer .info-container ul .menu-title h3 {
     font-size: 14px;
     font-weight: bold;
     line-height: 24px;
     color: var(--brown);
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
 }
 
-footer .info-container > div a {
+footer .info-container ul li {
+    margin-bottom: 10px;
+}
+
+footer .info-container ul li a {
     text-decoration: none;
-}
-
-footer .info-container > div a:hover  p {
-    color: var(--brown);
-}
-
-footer .info-container > div a p {
     font-size: 14px;
     color: var(--brown-yellow);
     line-height: 1rem;
-    margin-bottom: 10px;
     max-width: 250px;
 }
 
-footer .info-container > div .contato .contato-info {
+footer ul li .submenu {
+    display:block;
+}
+
+footer .info-container ul li a:hover {
+    color: var(--brown);
+}
+
+footer .info-container > ul .contato .contato-info {
     display: flex;
     align-items: center;
 }
 
-footer .info-container > div .contato .contato-info img {
+footer .info-container > ul .contato .submenu .contato-info img {
     margin-right: 10px;
-    position: relative;
-    top: -6px;
 }
 
-
-
+/* 
+    Container de Informações Adicionais (Formas de Pagamento, Desenvolvimento, etc.)
+*/
 
 footer .aditional-information {
     width: 100%;
@@ -137,14 +139,11 @@ footer .aditional-information {
 }
 
 footer .aditional-information > div {
-    width: min(1050px, 90%);
+    width: 95%;
+    max-width: 1050px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-}
-
-footer .aditional-information .desenvolvimento {
-    justify-self: center;
 }
 
 footer .aditional-information > div p {
@@ -178,4 +177,110 @@ footer .aditional-information > p {
     footer .novidades form button {
         width: 20%
     }
+}
+
+@media (max-width: 1024px) {
+
+    footer .novidades {
+        bottom: -76px;
+    }
+
+    footer .novidades form {
+        width: 75%;
+    }
+
+    footer .novidades form input {
+        margin-right: 0;
+    }
+
+}
+
+@media (max-width: 768px) {
+
+    footer .novidades {
+        padding: 1rem;
+        flex-direction: column;
+        justify-content: center;
+        bottom: -150px;
+    }
+
+    footer .novidades p {
+        width: 100%;
+        text-align: center;;
+    }
+
+    footer .novidades form {
+        width: 100%;
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    footer .novidades form input {
+        width: 100%;
+        margin-top: 1rem;
+    }
+
+    footer .novidades form button {
+        width: 100%;
+        margin-top: 1rem
+    }
+
+    footer .info-container > ul {
+        flex-direction: column;
+        margin-top: 170px;
+    }
+
+    footer .info-container {
+        padding-bottom: 10px;
+    }
+
+    footer .info-container ul li .menu-title  {
+        display: flex;
+        justify-content: space-between;
+        align-items:center;
+    }
+
+    footer .info-container ul li .menu-title .seta {
+        height: 8px;
+        width: 8px;
+        border-bottom: 2px solid var(--brown-yellow);
+        border-left: 2px solid var(--brown-yellow);
+        transform: rotate(-45deg);
+        cursor: pointer;
+        transition: .3s;
+    }
+
+    footer .info-container ul li .menu-title.open .seta {
+        transform: rotate(135deg);
+    }
+
+    footer .info-container ul li .submenu {
+        display: none;
+    }
+
+    footer .info-container ul li .menu-title.open ~ .submenu {
+        display: block;
+    }
+
+    footer .aditional-information {
+        height: auto;   
+    }
+
+    footer .aditional-information > div {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    footer .aditional-information > div p {
+        text-align: center;
+        margin-bottom: 1rem;
+        margin-top: 1.5rem;
+    }
+
+    footer .aditional-information > p {
+        position: relative;
+        bottom: 0;  
+        margin: 1rem 0;
+    }
+
 }
